# CRUDFileStorage

./: Dockerfile  README.md  docker-compose.yml  manage.py  migrate_and_runserver.sh  pyproject.toml
api/: serializers.py  urls.py  utils.py  views.py
crudfilestorage/: asgi.py  badrequest_handler.py  settings.py  urls.py  wsgi.py
storage/: admin.py  apps.py  forms.py  minio.py  minio_adapter.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
users/: apps.py  exceptions.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
