[tool.poetry]
name = "crudfilestorage"
version = "0.1.0"
description = ""
authors = ["Evg"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
minio = "^7.1.13"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
